--- a/lc_interpreter/bin/dune
+++ b/lc_interpreter/bin/dune
@@ -1,6 +1,4 @@
 (executable
  (public_name lc_interpreter)
  (name main)
- (libraries lc_interpreter sedlex batteries)
- (preprocess
-  (pps ppx_deriving.show sedlex.ppx)))
+ (libraries lc_interpreter batteries))
