--- a/lc_interpreter/dune-project
+++ b/lc_interpreter/dune-project
@@ -19,7 +19,7 @@
  (name lc_interpreter)
  (synopsis "A short synopsis")
  (description "A longer description")
- (depends ocaml dune)
+ (depends ocaml dune batteries)
  (tags
   (topics "to describe" your project)))
 
