--- a/lc_interpreter/lc_interpreter.opam
+++ b/lc_interpreter/lc_interpreter.opam
@@ -12,6 +12,7 @@ bug-reports: "https://github.com/username/reponame/issues"
 depends: [
   "ocaml"
   "dune" {>= "3.6"}
+  "batteries"
   "odoc" {with-doc}
 ]
 build: [
